# Grok

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAYERS.md  README.md  grok-dnd-skills-full-source.README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
.grok/skills/: _PRODUCTION_CONVENTIONS.md  conftest.py
.grok/skills/dnd-character-manager/: SKILL.md
.grok/skills/dnd-combat-assistant/: SKILL.md
.grok/skills/dnd-content-forge/: SKILL.md
.grok/skills/dnd-dice-engine/: SKILL.md
.grok/skills/dnd-downtime-manager/: SKILL.md
.grok/skills/dnd-loot-generator/: SKILL.md
.grok/skills/dnd-lore-archivist/: SKILL.md
.grok/skills/dnd-npc-personality-weaver/: SKILL.md
.grok/skills/dnd-persistent-dm/: SKILL.md
.grok/skills/dnd-quest-tracker/: SKILL.md
.grok/skills/dnd-randomizer/: SKILL.md
.grok/skills/dnd-rules-reference/: SKILL.md
.grok/skills/dnd-rumor-event-generator/: SKILL.md
.grok/skills/dnd-session-scribe/: SKILL.md
.grok/skills/dnd-skills-manager/: SKILL.md
.grok/skills/dnd-utils/: SKILL.md
.grok/skills/dnd-visual-weaver/: SKILL.md
.grok/skills/dnd-voice-assistant/: SKILL.md
.grok/skills/tests/: test_backend_hardening.py  test_full_backends.py  test_integration_campaign.py  test_orchestration_flow.py  test_playbook_randomizer.py  test_playbook_session_end.py  (+2 more)
scripts/: cleanup-system.ps1  cleanup.ps1  extract_cli_commands.py  ios-export.ps1  registry_sync.py  smoke_test.py  suite_score.py  validate_backends.py  validate_orchestration.py  validate_runtime.py  validate_skill_docs.py  validate_skills.py  visual_demo.py
(+84 files in other folders)
