[project]
name = "grok-dnd-skills"
version = "3.1.0"
description = "Persistent D&D campaign skills for Grok Build"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = [".grok/skills", ".grok/skills/tests"]
pythonpath = [".grok/skills/dnd-utils/scripts"]